tests/ui/impl-trait/non-defining-uses/ice-issue-146191.next.stderr
error[E0282]: type annotations needed
  --> $DIR/ice-issue-146191.rs:6:31
   |
LL | fn create_complex_future() -> impl Future<Output = impl ReturnsSend> {
   |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
